Aggiunto limite massimo di dimensione per una richiesta e adattata creazione di annuncio (foto)