@@ -16,6 +16,7 @@ import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.FlowPane;
+import javafx.scene.layout.Region;
 import javafx.scene.layout.VBox;
 import javafx.scene.web.WebEngine;
 import javafx.scene.web.WebView;
@@ -31,9 +32,7 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.List;
-import java.util.Locale;
-import java.util.ResourceBundle;
+import java.util.*;
 
 import static com.dietiestates25ui.handler.FormValidator.setupTextFormatter;
 
@@ -434,16 +433,23 @@ public class InserimentoInserzioneController extends AbstractController implemen
         fileChooser.setTitle("Seleziona Immagini");
         fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter("Immagini", "*.png", "*.jpg", "*.jpeg"));
 
-        List<File> newFiles = fileChooser.showOpenMultipleDialog(currentStage);
+        List<File> originalFiles = fileChooser.showOpenMultipleDialog(currentStage);
 
-        if (newFiles != null && !newFiles.isEmpty()) {
+        if (originalFiles != null && !originalFiles.isEmpty()) {
+            List<File> newFiles = new ArrayList<>(originalFiles);
+
+            for (File file : originalFiles) {
+                if (!validateImage(file)) {
+                    newFiles.remove(file);
+                }
+            }
             selectedImageList.addAll(newFiles);
 
             if (selectedImageList.size() > 5) {
                 Platform.runLater(() -> showPopup(POPUP_ERROR_TITLE, "Puoi selezionare al massimo 5 immagini.", ERROR_ICON));
 
                 while (selectedImageList.size() > 5) {
-                    selectedImageList.remove(selectedImageList.size() - 1);
+                    selectedImageList.removeLast();
                 }
             }
 
@@ -452,37 +458,49 @@ public class InserimentoInserzioneController extends AbstractController implemen
         checkFormValidity();
     }
 
+    private boolean validateImage(File file) {
+        if (file.length() > MAX_FILE_SIZE) {
+            Platform.runLater(() -> showPopup(POPUP_ERROR_TITLE, "La dimensione del file è troppo grande (max 2MB).", ERROR_ICON));
+            return false;
+        }
+        return true;
+    }
+
     private void updateImageThumbnails() {
         immaginiFlowPane.getChildren().clear();
 
         double fixedImageSize = 50;
 
         for (File file : selectedImageList) {
-            try {
-                Image image = new Image(file.toURI().toString());
-                ImageView imageView = new ImageView(image);
+            Image image = new Image(file.toURI().toString());
+            ImageView imageView = new ImageView(image);
 
-                imageView.setFitWidth(fixedImageSize);
-                imageView.setFitHeight(fixedImageSize);
-                imageView.setPreserveRatio(true);
+            imageView.setFitWidth(fixedImageSize);
+            imageView.setFitHeight(fixedImageSize);
+            imageView.setPreserveRatio(true);
 
-                Button deleteButton = new Button("X");
-                deleteButton.setStyle("-fx-background-color: red; -fx-text-fill: white; -fx-padding: 0px; -fx-font-size: 8px;");
+            Image closeIcon = new Image(Objects.requireNonNull(getClass().getResourceAsStream("/com/dietiestates25ui/images/erroricon.png")));
+            ImageView closeIconView = new ImageView(closeIcon);
+            closeIconView.setFitWidth(20);
+            closeIconView.setFitHeight(20);
 
-                deleteButton.setOnAction(e -> {
-                    logo.requestFocus();
-                    selectedImageList.remove(file);
-                    immaginiFlowPane.getChildren().remove(imageView.getParent());
-                    checkFormValidity();
-                });
+            Button deleteButton = new Button();
+            deleteButton.setGraphic(closeIconView);
 
-                VBox imageContainer = new VBox(imageView, deleteButton);
-                imageContainer.setAlignment(Pos.CENTER);
+            deleteButton.setStyle("-fx-padding: 0px; -fx-background-color: transparent;");
+            deleteButton.setPrefSize(Region.USE_COMPUTED_SIZE, Region.USE_COMPUTED_SIZE);
 
-                immaginiFlowPane.getChildren().add(imageContainer);
-            } catch (Exception e) {
-                logger.error("Error loading image", e);
-            }
+            deleteButton.setOnAction(e -> {
+                logo.requestFocus();
+                selectedImageList.remove(file);
+                immaginiFlowPane.getChildren().remove(imageView.getParent());
+                checkFormValidity();
+            });
+
+            VBox imageContainer = new VBox(imageView, deleteButton);
+            imageContainer.setAlignment(Pos.CENTER);
+
+            immaginiFlowPane.getChildren().add(imageContainer);
         }
     }
 
